@@ -28,7 +28,6 @@ CONFIG_RTAI_OPT_EXPERT=y
 #
 CONFIG_RTAI_HW_FPU=y
 CONFIG_RTAI_HW_APERIODIC_TIMER=y
-CONFIG_RTAI_HW_NRCPUS="2"
 CONFIG_RTAI_HW_TIMER_LATENCY="0"
 CONFIG_RTAI_HW_SCHED_LATENCY="0"
 
