@@ -400,24 +400,6 @@ AC_ARG_ENABLE(nucleus-timestamps,
 	esac])
 AC_MSG_RESULT(${CONFIG_RTAI_OPT_TIMESTAMPS:-no})
 
-AC_MSG_CHECKING(for number of CPUs (SMP-only))
-AC_ARG_ENABLE(cpus,
-	[ --enable-cpus		Enable CPUs],
-	[case "$enableval" in
- changequote(,)dnl
-	[1-8]) CONFIG_RTAI_HW_NRCPUS=$enableval ;;
- changequote([,])dnl
-	*) AC_MSG_ERROR([Bad argument to option: --enable-cpus=<number-of-CPUs>]) ;;
-	esac])
-if test x$CONFIG_RTAI_HW_NRCPUS = x; then
-    if test x$CONFIG_SMP = x; then
-        CONFIG_RTAI_HW_NRCPUS=1
-    else
-        CONFIG_RTAI_HW_NRCPUS=CONFIG_NR_CPUS
-    fi
-fi
-AC_MSG_RESULT(${CONFIG_RTAI_HW_NRCPUS:-1})
-
 AC_MSG_CHECKING(for FPU support)
 AC_ARG_ENABLE(fpu,
 	[ --enable-fpu		Enable FPU support],
@@ -628,7 +610,6 @@ AC_DEFINE_UNQUOTED(CONFIG_RTAI_VERSION_MAJOR,$CONFIG_RTAI_VERSION_MAJOR,[Kconfig
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_VERSION_MINOR,$CONFIG_RTAI_VERSION_MINOR,[Kconfig])
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_REVISION_LEVEL,$CONFIG_RTAI_REVISION_LEVEL,[Kconfig])
 
-AC_DEFINE_UNQUOTED(CONFIG_RTAI_HW_NRCPUS,$CONFIG_RTAI_HW_NRCPUS,[Kconfig])
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_HW_TIMER_LATENCY,$CONFIG_RTAI_HW_TIMER_LATENCY,[Kconfig])
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_HW_SCHED_LATENCY,$CONFIG_RTAI_HW_SCHED_LATENCY,[Kconfig])
 test \! x$CONFIG_RTAI_HW_FPU = x && AC_DEFINE(CONFIG_RTAI_HW_FPU,1,[Kconfig])
