@@ -1,5 +1,8 @@
 2004-09-01  Philippe Gerum  <rpm@xenomai.org>
 
+	* fusion: Get rid of CONFIG_RTAI_HW_NRCPUS and use the
+	Linux-defined constant instead.
+
 	* arch/ppc/patches: Update Adeos support to 2.6.8rc1-r6c5.
 
 	* include/nucleus/asm-ppc/atomic.h: Fix register notations in
